# theme-manager-plus

./: .gitignore  .theme-manager.conf  AGENTS.md  CHANGELOG.md  CONFIGPLAN.md  DOCSPLAN.md  HYPRLOCKPLAN.md  OMARCHY_DEFAULTS_UNIFICATION_PLAN.md  Omarchy-theme-management.md  PRESETS-PLAN.md  PR_SPLIT_PLAN.md  README.md  REALSENOTES.md  RELEASE_NOTES.md  RUSTUI-ARCH.md  RUSTUI-PLAN.md  STARSHIP-PLAN.md  config.example  config.toml.example  install-omarchy-menu.sh  install.sh  uninstall.sh
docs/: foot-sixel-support-plan.md  omarchy-default-audit.md  omarchy-default-resolution-spec.md
extras/omarchy/: tmplus-restart-waybar
extras/starship-themes/: drac-pill.toml
rust/: Cargo.toml  FUZZY-SEARCH-PLAN.md  build.rs
rust/src/: cli.rs  config.rs  git_ops.rs  hyprlock.rs  lib.rs  main.rs  omarchy.rs  omarchy_defaults.rs  paths.rs  presets.rs  preview.rs  starship.rs  theme_ops.rs  tui.rs  unlock.rs  walker.rs  waybar.rs
rust/tests/: cli_config.rs  cli_git_ops.rs  cli_hyprlock.rs  cli_presets.rs  cli_starship.rs  cli_theme_ops.rs  cli_unlock.rs  cli_walker.rs  cli_waybar.rs
rust/tests/support/: mod.rs
src/: theme-manager.sh
tests/: run.sh  theme_manager.bats
