[package]
name = "theme-manager-plus"
version = "0.2.6"
edition = "2021"
description = "Rust rewrite of Theme Manager Plus (scaffolding)"
license = "MIT"

[[bin]]
name = "theme-manager"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
walkdir = "2.5.0"
which = "6.0.1"
tempfile = "3.24.0"
ansi-to-tui = "8.0.0"
ratatui-core = "0.1.0"
syntect = "5.2.0"
rand = "0.8.5"
fuzzy-matcher = "0.3.7"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.0"
